<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_toggle_logger"
        android:icon="@drawable/ic_action_start"
        android:title="@string/label_toggle_logger"
        android:showAsAction="ifRoom"
        android:checkable="true"
        android:checked="false"/>
    
    <item
        android:id="@+id/menu_upload_data"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/menu_upload_data"
        android:showAsAction="ifRoom"/>
        
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/menu_exit"
        android:showAsAction="never"
        android:title="@string/menu_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>