<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_header_background"
    android:paddingBottom="5dp"
    android:paddingLeft="35dp"
    android:paddingRight="15dp"
    android:paddingTop="5dp" >

    <TextView
        android:id="@+id/label_nework_child_avglevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textAppearance="@style/Text.Label"
        android:text="@string/label_average_level"/>
    <TextView
        android:id="@+id/text_nework_child_avglevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_nework_child_avglevel"
        android:layout_alignBaseline="@+id/label_nework_child_avglevel"
        android:text="@string/filler_level"/>
    
    <TextView
        android:id="@+id/label_nework_child_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textAppearance="@style/Text.Label"
        android:layout_below="@+id/label_nework_child_avglevel"
        android:text="@string/label_count"/>
    <TextView
        android:id="@+id/text_nework_child_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_nework_child_count"
        android:layout_alignBaseline="@+id/label_nework_child_count"
        android:layout_alignLeft="@+id/text_nework_child_avglevel"
        android:text="@string/filler_count"/>
    
    <TextView
        android:id="@+id/label_nework_child_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textAppearance="@style/Text.Label"
        android:layout_below="@+id/label_nework_child_count"
        android:text="@string/label_frequency"/>
    <TextView
        android:id="@+id/text_nework_child_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_nework_child_frequency"
        android:layout_alignBaseline="@+id/label_nework_child_frequency"
        android:layout_alignLeft="@+id/text_nework_child_count"
        android:text="@string/filler_frequency"/>
    
    <TextView
        android:id="@+id/label_nework_child_capabilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textAppearance="@style/Text.Label"
        android:layout_below="@+id/label_nework_child_frequency"
        android:text="@string/label_capabilities"/>

    <TextView
        android:id="@+id/text_nework_child_capabilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_nework_child_capabilities"
        android:layout_alignLeft="@+id/text_nework_child_frequency"
        android:layout_toRightOf="@+id/label_nework_child_capabilities"
        android:maxLines="2"
        android:text="@string/filler_capabilities" />

</RelativeLayout>