<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_import_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/radiogroup_import"
        android:text="@string/label_source"
        android:textAppearance="@style/Text.Heading" />

    <RadioGroup
        android:id="@+id/radiogroup_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:checkedButton="@+id/radio_import_wigle"
        android:orientation="vertical" >

	    <RadioButton
	        android:id="@+id/radio_import_wigle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/label_wiglewifi" />
	    <RadioButton
            android:id="@+id/radio_import_wardrive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_wardrive" />
    </RadioGroup>
    
     <Button
        android:id="@+id/button_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/label_import_source"
        android:layout_below="@+id/label_import_source"
        android:minHeight="42dp"
        android:text="@string/label_import"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/label_import_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list_import_status"
        android:layout_alignParentLeft="true"
        android:text="@string/label_results"
        android:textAppearance="@style/Text.Heading.Alt" />

    <ListView
        android:id="@+id/list_import_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/button_import"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progress_import_task"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radiogroup_import"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@+id/label_import_source"
        android:layout_toRightOf="@+id/label_import_results"
        android:max="100"
        android:minWidth="100dp"
        android:progress="0" />

</RelativeLayout>
