<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_graph_root"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/frame_network_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".NetworkGraphFragment" >

        <TextView
            android:id="@+id/label_network_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/label_ssid"
            android:textAppearance="@style/Text.Label" />

        <TextView
            android:id="@+id/text_network_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_network_ssid"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/label_network_ssid"
            android:text="@string/filler_ssid"
            android:textAppearance="@style/Text.Subtitle" />

        <TextView
            android:id="@+id/label_network_bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/label_network_ssid"
            android:layout_below="@+id/label_network_ssid"
            android:layout_centerHorizontal="true"
            android:text="@string/label_bssid"
            android:textAppearance="@style/Text.Label" />

        <TextView
            android:id="@+id/text_network_bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/label_network_bssid"
            android:layout_alignLeft="@+id/text_network_ssid"
            android:layout_below="@+id/text_network_ssid"
            android:text="@string/filler_bssid"
            android:textAppearance="@style/Text.Subtitle" />

        <com.blueodin.wifilogger.SignalGraph
            android:id="@+id/signalGraph"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@+id/label_network_bssid"
            android:layout_marginTop="20dp" />

        <FrameLayout
            android:id="@+id/layout_network_graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/signalGraph"
            android:layout_marginTop="10dp" >

        </FrameLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/text_network_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/filler_empty"
        android:textAppearance="@style/Text.Heading"
        android:visibility="gone" />

</FrameLayout>